# deepseek-r1-playground

./: .gitignore  README.md  flake.nix  generate.py  pyproject.toml
data/: questions.json  train.jsonl  valid.jsonl
src/: DeepSeek-R1-Zero-torch.py  DeepSeek-R1-Zero.py  DeepSeek_R1_from_scratch.ipynb  MINST_full_training.py
src/adapters/: adapter_config.json
